@@ -5,8 +5,7 @@
   this is test for that command.
 ** annoying fsvn-result buffer.
 
-** support `merge'
- can use ediff-merge
+** `merge' can use ediff-merge
 
 ** fsvn-xml-*-dtd-alist check original dtd.
 
@@ -117,6 +116,9 @@ proplist --recursive
 ** TODO dired-mode remove vc-find-file-hook from find-file-hook
 
 ** fsvn-blame-minor-mode more efficient UI
+
+** fsvn-blame-minor-mode accept revision range
+
 
 ** parse result threshold
 
